--- a/notebooks/04_bias_variance_analysis.ipynb
+++ b/notebooks/04_bias_variance_analysis.ipynb
@@ -11,22 +11,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "import pandas as pd\n",
     "import numpy as np\n",
+    "import pandas as pd\n",
     "import matplotlib.pyplot as plt\n",
-    "import seaborn as sns\n",
-    "from sklearn.model_selection import train_test_split, cross_val_score\n",
-    "from sklearn.metrics import accuracy_score, classification_report, confusion_matrix\n",
     "from sklearn.tree import DecisionTreeClassifier\n",
+    "from sklearn.metrics import accuracy_score\n",
     "import sys\n",
     "from pathlib import Path\n",
+    "import matplotlib.pyplot as plt\n",
+    "from sklearn.model_selection import learning_curve, validation_curve, train_test_split, cross_val_score\n",
+    "from sklearn.metrics import accuracy_score\n",
+    "import seaborn as sns\n",
     "\n",
     "# Añadir directorio raíz al path\n",
-    "sys.path.append(str(Path().resolve().parent))\n",
+    "sys.path.append(str(Path(__file__).resolve().parent.parent.parent))\n",
+    "\n",
     "\n",
     "from src.config import PROCESSED_DATA_DIR, MODELS_DIR, RANDOM_STATE, TEST_SIZE, TARGET_COLUMN\n",
     "from src.models.bias_variance import plot_learning_curve, plot_validation_curve, diagnose_bias_variance, plot_complexity_analysis\n",
