--- a/notebooks/04_bias_variance_analysis.ipynb
+++ b/notebooks/04_bias_variance_analysis.ipynb
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -22,14 +22,14 @@
     "from sklearn.metrics import accuracy_score\n",
     "import sys\n",
     "from pathlib import Path\n",
-    "import matplotlib.pyplot as plt\n",
     "from sklearn.model_selection import learning_curve, validation_curve, train_test_split, cross_val_score\n",
-    "from sklearn.metrics import accuracy_score\n",
     "import seaborn as sns\n",
+    "import os\n",
     "\n",
     "# Añadir directorio raíz al path\n",
-    "sys.path.append(str(Path(__file__).resolve().parent.parent.parent))\n",
-    "\n",
+    "notebook_path = Path.cwd()\n",
+    "project_root = r\"c:\\Users\\alexl\\OneDrive\\Escritorio\\Machine Learning\\startups-ml\"\n",
+    "sys.path.append(project_root)\n",
     "\n",
     "from src.config import PROCESSED_DATA_DIR, MODELS_DIR, RANDOM_STATE, TEST_SIZE, TARGET_COLUMN\n",
     "from src.models.bias_variance import plot_learning_curve, plot_validation_curve, diagnose_bias_variance, plot_complexity_analysis\n",
@@ -51,7 +51,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -102,34 +102,41 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Accuracy en train: 1.0000\n",
-      "Accuracy en test: 0.9568\n",
+      "Accuracy en train: 0.9648\n",
+      "Accuracy en test: 0.9676\n",
       "\n",
-      "Reporte de clasificación:\n",
-      "              precision    recall  f1-score   support\n",
-      "\n",
-      "    acquired       0.97      0.97      0.97       120\n",
-      "      closed       0.94      0.94      0.94        65\n",
-      "\n",
-      "    accuracy                           0.96       185\n",
-      "   macro avg       0.95      0.95      0.95       185\n",
-      "weighted avg       0.96      0.96      0.96       185\n",
-      "\n"
+      "Reporte de clasificación:\n"
+     ]
+    },
+    {
+     "ename": "NameError",
+     "evalue": "name 'classification_report' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[31m---------------------------------------------------------------------------\u001b[39m",
+      "\u001b[31mNameError\u001b[39m                                 Traceback (most recent call last)",
+      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[11]\u001b[39m\u001b[32m, line 17\u001b[39m\n\u001b[32m     15\u001b[39m \u001b[38;5;28mprint\u001b[39m(\u001b[33mf\u001b[39m\u001b[33m\"\u001b[39m\u001b[33mAccuracy en test: \u001b[39m\u001b[38;5;132;01m{\u001b[39;00maccuracy_score(y_test,\u001b[38;5;250m \u001b[39my_test_pred)\u001b[38;5;132;01m:\u001b[39;00m\u001b[33m.4f\u001b[39m\u001b[38;5;132;01m}\u001b[39;00m\u001b[33m\"\u001b[39m)\n\u001b[32m     16\u001b[39m \u001b[38;5;28mprint\u001b[39m(\u001b[33m\"\u001b[39m\u001b[38;5;130;01m\\n\u001b[39;00m\u001b[33mReporte de clasificación:\u001b[39m\u001b[33m\"\u001b[39m)\n\u001b[32m---> \u001b[39m\u001b[32m17\u001b[39m \u001b[38;5;28mprint\u001b[39m(\u001b[43mclassification_report\u001b[49m(y_test, y_test_pred))\n",
+      "\u001b[31mNameError\u001b[39m: name 'classification_report' is not defined"
      ]
     }
    ],
    "source": [
     "# Entrenar árbol de decisión sin restricciones\n",
-    "dt_classifier = DecisionTreeClassifier(random_state=RANDOM_STATE)\n",
+    "#dt_classifier = DecisionTreeClassifier(random_state=RANDOM_STATE)\n",
+    "#dt_classifier.fit(X_train, y_train)\n",
+    "dt_classifier = DecisionTreeClassifier(\n",
+    "        max_depth=5,  # Limitar la profundidad\n",
+    "        min_samples_leaf=15,  # Requerir más muestras por nodo hoja\n",
+    "        random_state=RANDOM_STATE\n",
+    "    )\n",
     "dt_classifier.fit(X_train, y_train)\n",
-    "\n",
     "# Evaluación básica\n",
     "y_train_pred = dt_classifier.predict(X_train)\n",
     "y_test_pred = dt_classifier.predict(X_test)\n",
