03 and 04 update with clear data

--- a/notebooks/03_baseline_models.ipynb
+++ b/notebooks/03_baseline_models.ipynb
@@ -2,14 +2,14 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Tamaño del conjunto de entrenamiento: (923, 136)\n"
+      "Tamaño del conjunto de entrenamiento: (923, 135)\n"
      ]
     }
    ],
@@ -47,7 +47,7 @@
     "columnas_a_eliminar = [\n",
     "    'Unnamed: 0', 'id', 'object_id', 'Unnamed: 6', 'state_code.1',\n",
     "    'zip_code', 'city', 'name', 'closed_at',\n",
-    "    'founded_at', 'first_funding_at', 'last_funding_at'\n",
+    "    'founded_at', 'first_funding_at', 'last_funding_at', 'labels'\n",
     "]\n",
     "df = df.drop(columns=[col for col in columnas_a_eliminar if col in df.columns])\n",
     "\n",
@@ -64,7 +64,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -127,7 +127,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -190,7 +190,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -235,7 +235,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
