06 update and finish

--- a/notebooks/06_model_tuning_and_selection.ipynb
+++ b/notebooks/06_model_tuning_and_selection.ipynb
@@ -432,6 +432,36 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Pipeline completo guardado en: C:\\Users\\alexl\\OneDrive\\Escritorio\\Machine Learning\\startups-ml\\models\\final_rf_pipeline.pkl\n"
+     ]
+    }
+   ],
+   "source": [
+    "from sklearn.pipeline import Pipeline\n",
+    "import joblib\n",
+    "\n",
+    "# Si tu preprocesamiento ya está hecho y solo necesitas guardar el modelo:\n",
+    "pipeline = Pipeline([\n",
+    "    ('model', best_rf)  # o best_xgb si prefieres ese\n",
+    "])\n",
+    "\n",
+    "# Entrena el pipeline (solo necesario si no lo habías hecho ya)\n",
+    "pipeline.fit(X_train, y_train)\n",
+    "\n",
+    "# Guarda el pipeline completo\n",
+    "joblib.dump(pipeline, MODELS_DIR / \"final_rf_pipeline.pkl\")\n",
+    "print(\"Pipeline completo guardado en:\", MODELS_DIR / \"final_rf_pipeline.pkl\")"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
