data test create

--- a/notebooks/06_model_tuning_and_selection.ipynb
+++ b/notebooks/06_model_tuning_and_selection.ipynb
@@ -462,6 +462,33 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "¡Archivos X_test.csv, y_test.csv y nuevos_datos.csv exportados correctamente en la carpeta /data!\n"
+     ]
+    }
+   ],
+   "source": [
+    "import os\n",
+    "import pandas as pd\n",
+    "\n",
+    "data_dir = \"../data\"\n",
+    "os.makedirs(data_dir, exist_ok=True)\n",
+    "\n",
+    "X_test.to_csv(f\"{data_dir}/X_test.csv\", index=False)\n",
+    "y_test_df.to_csv(f\"{data_dir}/y_test.csv\", index=False)\n",
+    "X_test.head(5).to_csv(f\"{data_dir}/nuevos_datos.csv\", index=False)\n",
+    "\n",
+    "print(\"¡Archivos X_test.csv, y_test.csv y nuevos_datos.csv exportados correctamente en la carpeta /data!\")"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
