Imagenes de todos los notebooks en reports

--- a/notebooks/06_model_tuning_and_selection.ipynb
+++ b/notebooks/06_model_tuning_and_selection.ipynb
@@ -139,19 +139,96 @@
       "Mejor configuración RF: {'max_depth': 10, 'min_samples_leaf': 1, 'min_samples_split': 5, 'n_estimators': 100}\n",
       "Mejor accuracy (CV): 0.7995417156286722\n",
       "Buscando mejores hiperparámetros para XGBoost...\n",
-      "Fitting 5 folds for each of 48 candidates, totalling 240 fits\n",
-      "Mejor configuración XGB: {'colsample_bytree': 0.8, 'learning_rate': 0.1, 'max_depth': 3, 'n_estimators': 100, 'subsample': 1.0}\n",
-      "Mejor accuracy (CV): 0.7984841363102233\n"
+      "Fitting 5 folds for each of 48 candidates, totalling 240 fits\n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "c:\\Users\\alexl\\OneDrive\\Escritorio\\Machine Learning\\startups-ml\\venv\\Lib\\site-packages\\xgboost\\training.py:183: UserWarning: [23:48:13] WARNING: C:\\actions-runner\\_work\\xgboost\\xgboost\\src\\learner.cc:738: \n",
+      "c:\\Users\\alexl\\OneDrive\\Escritorio\\Machine Learning\\startups-ml\\venv\\Lib\\site-packages\\sklearn\\model_selection\\_validation.py:528: FitFailedWarning: \n",
+      "1 fits failed out of a total of 240.\n",
+      "The score on these train-test partitions for these parameters will be set to nan.\n",
+      "If these failures are not expected, you can try to debug them by setting error_score='raise'.\n",
+      "\n",
+      "Below are more details about the failures:\n",
+      "--------------------------------------------------------------------------------\n",
+      "1 fits failed with the following error:\n",
+      "Traceback (most recent call last):\n",
+      "  File \"c:\\Users\\alexl\\OneDrive\\Escritorio\\Machine Learning\\startups-ml\\venv\\Lib\\site-packages\\sklearn\\model_selection\\_validation.py\", line 866, in _fit_and_score\n",
+      "    estimator.fit(X_train, y_train, **fit_params)\n",
+      "  File \"c:\\Users\\alexl\\OneDrive\\Escritorio\\Machine Learning\\startups-ml\\venv\\Lib\\site-packages\\xgboost\\core.py\", line 729, in inner_f\n",
+      "    return func(**kwargs)\n",
+      "           ^^^^^^^^^^^^^^\n",
+      "  File \"c:\\Users\\alexl\\OneDrive\\Escritorio\\Machine Learning\\startups-ml\\venv\\Lib\\site-packages\\xgboost\\sklearn.py\", line 1663, in fit\n",
+      "    train_dmatrix, evals = _wrap_evaluation_matrices(\n",
+      "                           ^^^^^^^^^^^^^^^^^^^^^^^^^^\n",
+      "  File \"c:\\Users\\alexl\\OneDrive\\Escritorio\\Machine Learning\\startups-ml\\venv\\Lib\\site-packages\\xgboost\\sklearn.py\", line 628, in _wrap_evaluation_matrices\n",
+      "    train_dmatrix = create_dmatrix(\n",
+      "                    ^^^^^^^^^^^^^^^\n",
+      "  File \"c:\\Users\\alexl\\OneDrive\\Escritorio\\Machine Learning\\startups-ml\\venv\\Lib\\site-packages\\xgboost\\sklearn.py\", line 1137, in _create_dmatrix\n",
+      "    return QuantileDMatrix(\n",
+      "           ^^^^^^^^^^^^^^^^\n",
+      "  File \"c:\\Users\\alexl\\OneDrive\\Escritorio\\Machine Learning\\startups-ml\\venv\\Lib\\site-packages\\xgboost\\core.py\", line 729, in inner_f\n",
+      "    return func(**kwargs)\n",
+      "           ^^^^^^^^^^^^^^\n",
+      "  File \"c:\\Users\\alexl\\OneDrive\\Escritorio\\Machine Learning\\startups-ml\\venv\\Lib\\site-packages\\xgboost\\core.py\", line 1614, in __init__\n",
+      "    self._init(\n",
+      "  File \"c:\\Users\\alexl\\OneDrive\\Escritorio\\Machine Learning\\startups-ml\\venv\\Lib\\site-packages\\xgboost\\core.py\", line 1678, in _init\n",
+      "    it.reraise()\n",
+      "  File \"c:\\Users\\alexl\\OneDrive\\Escritorio\\Machine Learning\\startups-ml\\venv\\Lib\\site-packages\\xgboost\\core.py\", line 572, in reraise\n",
+      "    raise exc  # pylint: disable=raising-bad-type\n",
+      "    ^^^^^^^^^\n",
+      "  File \"c:\\Users\\alexl\\OneDrive\\Escritorio\\Machine Learning\\startups-ml\\venv\\Lib\\site-packages\\xgboost\\core.py\", line 553, in _handle_exception\n",
+      "    return fn()\n",
+      "           ^^^^\n",
+      "  File \"c:\\Users\\alexl\\OneDrive\\Escritorio\\Machine Learning\\startups-ml\\venv\\Lib\\site-packages\\xgboost\\core.py\", line 640, in <lambda>\n",
+      "    return self._handle_exception(lambda: int(self.next(input_data)), 0)\n",
+      "                                              ^^^^^^^^^^^^^^^^^^^^^\n",
+      "  File \"c:\\Users\\alexl\\OneDrive\\Escritorio\\Machine Learning\\startups-ml\\venv\\Lib\\site-packages\\xgboost\\data.py\", line 1654, in next\n",
+      "    input_data(**self.kwargs)\n",
+      "  File \"c:\\Users\\alexl\\OneDrive\\Escritorio\\Machine Learning\\startups-ml\\venv\\Lib\\site-packages\\xgboost\\core.py\", line 729, in inner_f\n",
+      "    return func(**kwargs)\n",
+      "           ^^^^^^^^^^^^^^\n",
+      "  File \"c:\\Users\\alexl\\OneDrive\\Escritorio\\Machine Learning\\startups-ml\\venv\\Lib\\site-packages\\xgboost\\core.py\", line 629, in input_data\n",
+      "    self.proxy.set_info(\n",
+      "  File \"c:\\Users\\alexl\\OneDrive\\Escritorio\\Machine Learning\\startups-ml\\venv\\Lib\\site-packages\\xgboost\\core.py\", line 729, in inner_f\n",
+      "    return func(**kwargs)\n",
+      "           ^^^^^^^^^^^^^^\n",
+      "  File \"c:\\Users\\alexl\\OneDrive\\Escritorio\\Machine Learning\\startups-ml\\venv\\Lib\\site-packages\\xgboost\\core.py\", line 961, in set_info\n",
+      "    self.set_label(label)\n",
+      "  File \"c:\\Users\\alexl\\OneDrive\\Escritorio\\Machine Learning\\startups-ml\\venv\\Lib\\site-packages\\xgboost\\core.py\", line 1099, in set_label\n",
+      "    dispatch_meta_backend(self, label, \"label\", \"float\")\n",
+      "  File \"c:\\Users\\alexl\\OneDrive\\Escritorio\\Machine Learning\\startups-ml\\venv\\Lib\\site-packages\\xgboost\\data.py\", line 1586, in dispatch_meta_backend\n",
+      "    _meta_from_numpy(data, name, dtype, handle)\n",
+      "  File \"c:\\Users\\alexl\\OneDrive\\Escritorio\\Machine Learning\\startups-ml\\venv\\Lib\\site-packages\\xgboost\\data.py\", line 1533, in _meta_from_numpy\n",
+      "    _check_call(_LIB.XGDMatrixSetInfoFromInterface(handle, c_str(field), interface_str))\n",
+      "  File \"c:\\Users\\alexl\\OneDrive\\Escritorio\\Machine Learning\\startups-ml\\venv\\Lib\\site-packages\\xgboost\\core.py\", line 310, in _check_call\n",
+      "    raise XGBoostError(py_str(_LIB.XGBGetLastError()))\n",
+      "xgboost.core.XGBoostError: [00:00:51] C:\\actions-runner\\_work\\xgboost\\xgboost\\src\\data\\array_interface.cu:44: Check failed: err == cudaGetLastError() (0 vs. 46) : \n",
+      "\n",
+      "  warnings.warn(some_fits_failed_message, FitFailedWarning)\n",
+      "c:\\Users\\alexl\\OneDrive\\Escritorio\\Machine Learning\\startups-ml\\venv\\Lib\\site-packages\\sklearn\\model_selection\\_search.py:1108: UserWarning: One or more of the test scores are non-finite: [       nan 0.76810811 0.79198002 0.78224442 0.78547591 0.7833255\n",
+      " 0.79417156 0.79308461 0.78005875 0.78008813 0.79416569 0.78333725\n",
+      " 0.78981786 0.79848414 0.78007638 0.78980024 0.77896005 0.78658637\n",
+      " 0.78114571 0.78222092 0.78008813 0.78441246 0.77357227 0.78549354\n",
+      " 0.77245006 0.76596945 0.79199765 0.78548179 0.77896592 0.78224442\n",
+      " 0.78874853 0.78875441 0.77896592 0.76921857 0.79415394 0.78117509\n",
+      " 0.78440658 0.79523502 0.77576381 0.78436545 0.78548766 0.7876557\n",
+      " 0.77574618 0.78331375 0.78875441 0.78656874 0.77250294 0.78330787]\n",
+      "  warnings.warn(\n",
+      "c:\\Users\\alexl\\OneDrive\\Escritorio\\Machine Learning\\startups-ml\\venv\\Lib\\site-packages\\xgboost\\training.py:183: UserWarning: [00:01:09] WARNING: C:\\actions-runner\\_work\\xgboost\\xgboost\\src\\learner.cc:738: \n",
       "Parameters: { \"use_label_encoder\" } are not used.\n",
       "\n",
       "  bst.update(dtrain, iteration=i, fobj=obj)\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Mejor configuración XGB: {'colsample_bytree': 0.8, 'learning_rate': 0.1, 'max_depth': 3, 'n_estimators': 100, 'subsample': 1.0}\n",
+      "Mejor accuracy (CV): 0.7984841363102233\n"
      ]
     },
     {
@@ -287,7 +364,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -380,6 +457,7 @@
     "    plt.ylabel('Valor real')\n",
     "    plt.title(f'Matriz de Confusión - {name}')\n",
     "    plt.tight_layout()\n",
+    "    plt.savefig(f\"../reports/figures/model_tuning_and_selection/{name}_confusion_matrix.png\")\n",
     "    plt.show()"
    ]
   },
