feature engineering completado

--- a/notebooks/02_feature_engineering.ipynb
+++ b/notebooks/02_feature_engineering.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -402,6 +402,232 @@
     "print(f\"- Características originales: {len(df.columns) - len(available_features)}\")\n",
     "print(f\"- Nuevas características creadas: {len(available_features)}\")\n",
     "print(f\"- Total características: {len(df.columns)}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Unnamed: 0</th>\n",
+       "      <th>state_code</th>\n",
+       "      <th>latitude</th>\n",
+       "      <th>longitude</th>\n",
+       "      <th>zip_code</th>\n",
+       "      <th>id</th>\n",
+       "      <th>city</th>\n",
+       "      <th>Unnamed: 6</th>\n",
+       "      <th>name</th>\n",
+       "      <th>labels</th>\n",
+       "      <th>...</th>\n",
+       "      <th>has_roundC</th>\n",
+       "      <th>has_roundD</th>\n",
+       "      <th>avg_participants</th>\n",
+       "      <th>is_top500</th>\n",
+       "      <th>status</th>\n",
+       "      <th>funding_per_round</th>\n",
+       "      <th>funding_timespan</th>\n",
+       "      <th>relationships_per_milestone</th>\n",
+       "      <th>in_tech_hub</th>\n",
+       "      <th>status_numeric</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>1005.0</td>\n",
+       "      <td>CA</td>\n",
+       "      <td>42.358880</td>\n",
+       "      <td>-71.056820</td>\n",
+       "      <td>92101</td>\n",
+       "      <td>c:6669</td>\n",
+       "      <td>San Diego</td>\n",
+       "      <td>San Francisco CA 94105</td>\n",
+       "      <td>Bandsintown</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>...</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>1.0000</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>acquired</td>\n",
+       "      <td>1.250000e+05</td>\n",
+       "      <td>0.7534</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>204.0</td>\n",
+       "      <td>CA</td>\n",
+       "      <td>37.238916</td>\n",
+       "      <td>-121.973718</td>\n",
+       "      <td>95032</td>\n",
+       "      <td>c:16283</td>\n",
+       "      <td>Los Gatos</td>\n",
+       "      <td>San Francisco CA 94105</td>\n",
+       "      <td>TriCipher</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>...</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>4.7500</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>acquired</td>\n",
+       "      <td>1.002500e+07</td>\n",
+       "      <td>4.8713</td>\n",
+       "      <td>9.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>1001.0</td>\n",
+       "      <td>CA</td>\n",
+       "      <td>32.901049</td>\n",
+       "      <td>-117.192656</td>\n",
+       "      <td>92121</td>\n",
+       "      <td>c:65620</td>\n",
+       "      <td>San Diego</td>\n",
+       "      <td>San Diego CA 92121</td>\n",
+       "      <td>Plixi</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>...</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>4.0000</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>acquired</td>\n",
+       "      <td>2.600000e+06</td>\n",
+       "      <td>0.0000</td>\n",
+       "      <td>2.5</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>738.0</td>\n",
+       "      <td>CA</td>\n",
+       "      <td>37.320309</td>\n",
+       "      <td>-122.050040</td>\n",
+       "      <td>95014</td>\n",
+       "      <td>c:42668</td>\n",
+       "      <td>Cupertino</td>\n",
+       "      <td>Cupertino CA 95014</td>\n",
+       "      <td>Solidcore Systems</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>...</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>3.3333</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>acquired</td>\n",
+       "      <td>1.333333e+07</td>\n",
+       "      <td>2.1836</td>\n",
+       "      <td>5.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>1002.0</td>\n",
+       "      <td>CA</td>\n",
+       "      <td>37.779281</td>\n",
+       "      <td>-122.419236</td>\n",
+       "      <td>94105</td>\n",
+       "      <td>c:65806</td>\n",
+       "      <td>San Francisco</td>\n",
+       "      <td>San Francisco CA 94105</td>\n",
+       "      <td>Inhale Digital</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>...</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>1.0000</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>closed</td>\n",
+       "      <td>6.500000e+05</td>\n",
+       "      <td>1.6685</td>\n",
+       "      <td>2.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>5 rows × 54 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   Unnamed: 0 state_code   latitude   longitude zip_code       id  \\\n",
+       "0      1005.0         CA  42.358880  -71.056820    92101   c:6669   \n",
+       "1       204.0         CA  37.238916 -121.973718    95032  c:16283   \n",
+       "2      1001.0         CA  32.901049 -117.192656    92121  c:65620   \n",
+       "3       738.0         CA  37.320309 -122.050040    95014  c:42668   \n",
+       "4      1002.0         CA  37.779281 -122.419236    94105  c:65806   \n",
+       "\n",
+       "            city              Unnamed: 6               name  labels  ...  \\\n",
+       "0      San Diego  San Francisco CA 94105        Bandsintown     1.0  ...   \n",
+       "1      Los Gatos  San Francisco CA 94105          TriCipher     1.0  ...   \n",
+       "2      San Diego      San Diego CA 92121              Plixi     1.0  ...   \n",
+       "3      Cupertino      Cupertino CA 95014  Solidcore Systems     1.0  ...   \n",
+       "4  San Francisco  San Francisco CA 94105     Inhale Digital     0.0  ...   \n",
+       "\n",
+       "  has_roundC has_roundD avg_participants is_top500    status  \\\n",
+       "0        0.0        0.0           1.0000       0.0  acquired   \n",
+       "1        1.0        1.0           4.7500       1.0  acquired   \n",
+       "2        0.0        0.0           4.0000       1.0  acquired   \n",
+       "3        1.0        1.0           3.3333       1.0  acquired   \n",
+       "4        0.0        0.0           1.0000       1.0    closed   \n",
+       "\n",
+       "   funding_per_round  funding_timespan  relationships_per_milestone  \\\n",
+       "0       1.250000e+05            0.7534                          1.0   \n",
+       "1       1.002500e+07            4.8713                          9.0   \n",
+       "2       2.600000e+06            0.0000                          2.5   \n",
+       "3       1.333333e+07            2.1836                          5.0   \n",
+       "4       6.500000e+05            1.6685                          2.0   \n",
+       "\n",
+       "   in_tech_hub  status_numeric  \n",
+       "0          1.0               1  \n",
+       "1          1.0               1  \n",
+       "2          1.0               1  \n",
+       "3          1.0               1  \n",
+       "4          1.0               0  \n",
+       "\n",
+       "[5 rows x 54 columns]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "from src.features.feature_engineering import create_features\n",
+    "\n",
+    "# Asumiendo que “df” ya está cargado y limpio\n",
+    "df_feat = create_features(df)\n",
+    "display(df_feat.head())"
    ]
   }
  ],
