03 actualizado con buenas prácticas

--- a/Untitled.ipynb
+++ b/Untitled.ipynb
@@ -1,19 +1,8 @@
 {
  "cells": [
   {
-   "cell_type": "markdown",
-   "id": "f4032a87",
-   "metadata": {},
-   "source": [
-    "# 03_baseline_models_v2.ipynb\n",
-    "\n",
-    "**Objetivo:**  \n",
-    "Entrenar y evaluar modelos baseline (Árbol de Decisión y Regresión Logística) sobre el dataset procesado de startups."
-   ]
-  },
-  {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "id": "2f8e6ee8-2924-48b7-8cb2-c13166403cc2",
    "metadata": {},
    "outputs": [
@@ -249,6 +238,8 @@
     "from sklearn.tree import DecisionTreeClassifier\n",
     "from sklearn.linear_model import LogisticRegression\n",
     "import pickle\n",
+    "\n",
+    "\n",
     "from src.config import RANDOM_STATE, TEST_SIZE, TARGET_COLUMN, MODELS_DIR, PROCESSED_DATA_DIR, FIGURES_DIR\n",
     "\n",
     "\n",
@@ -256,16 +247,6 @@
     "df = pd.read_csv(PROCESSED_DATA_DIR / \"startup_data_processed.csv\")\n",
     "display(df.head())\n",
     "print(f\"Shape inicial: {df.shape}\")"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "650faf31",
-   "metadata": {},
-   "source": [
-    "## 2. Limpieza de columnas irrelevantes\n",
-    "\n",
-    "Eliminación de identificadores, fechas y dummies problemáticos."
    ]
   },
   {
@@ -336,16 +317,6 @@
     ")\n",
     "print(f\"Tamaño del conjunto de entrenamiento: {X_train.shape}\")\n",
     "print(f\"Tamaño del conjunto de test: {X_test.shape}\")"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "d4a3c548",
-   "metadata": {},
-   "source": [
-    "## 3. Evaluación: Árbol de Decisión\n",
-    "\n",
-    "Métricas de accuracy, reporte de clasificación y matriz de confusión."
    ]
   },
   {
@@ -478,16 +449,6 @@
     "fig_dir.mkdir(parents=True, exist_ok=True)\n",
     "fig.savefig(fig_dir / \"dt_confusion_matrix.png\", bbox_inches=\"tight\")\n",
     "plt.show()"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "78984fd0",
-   "metadata": {},
-   "source": [
-    "## 4. Entrenamiento: Regresión Logística\n",
-    "\n",
-    "Ajuste del LogisticRegression con `max_iter=1000`."
    ]
   },
   {
@@ -630,16 +591,6 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "id": "32612920",
-   "metadata": {},
-   "source": [
-    "## 5. Comparativa de modelos baseline\n",
-    "\n",
-    "Gráfico de barras comparando accuracy en train vs test."
-   ]
-  },
-  {
    "cell_type": "code",
    "execution_count": 13,
    "id": "3565a056-5c13-40ab-b193-5f4dea8e6ba5",
@@ -739,6 +690,59 @@
     "fig_dir.mkdir(parents=True, exist_ok=True)\n",
     "fig.savefig(fig_dir / \"baseline_comparison.png\", bbox_inches=\"tight\")\n",
     "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "id": "97d2ad1e-27c9-4dd9-a7c1-2f689f437dde",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "decision_tree          C:\\Users\\alexl\\OneDrive\\Escritorio\\Machine Lea...\n",
+       "logistic_regression    C:\\Users\\alexl\\OneDrive\\Escritorio\\Machine Lea...\n",
+       "Name: Ruta de modelo, dtype: object"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Modelos baseline en: C:\\Users\\alexl\\OneDrive\\Escritorio\\Machine Learning\\startups-ml\\models\\baseline\n"
+     ]
+    }
+   ],
+   "source": [
+    "# ### Guardar modelos baseline\n",
+    "from pathlib import Path\n",
+    "from IPython.display import display\n",
+    "import pandas as pd\n",
+    "\n",
+    "# 1) Crear carpeta para modelos\n",
+    "baseline_dir = MODELS_DIR / \"baseline\"\n",
+    "baseline_dir.mkdir(parents=True, exist_ok=True)\n",
+    "\n",
+    "# 2) Serializar y guardar cada modelo\n",
+    "saved = {}\n",
+    "for name, clf in [\n",
+    "    (\"decision_tree\", dt_classifier),\n",
+    "    (\"logistic_regression\", lr_classifier)\n",
+    "]:\n",
+    "    path = baseline_dir / f\"{name}.pkl\"\n",
+    "    with open(path, \"wb\") as f:\n",
+    "        pickle.dump(clf, f)\n",
+    "    saved[name] = str(path)\n",
+    "\n",
+    "# 3) Mostrar las rutas de los archivos guardados\n",
+    "display(pd.Series(saved, name=\"Ruta de modelo\"))\n",
+    "\n",
+    "# ✔️ Listo: modelos guardados en\n",
+    "print(f\"Modelos baseline en: {baseline_dir}\")"
    ]
   }
  ],
