buenas prácticas implementadas

--- a/notebooks/01_eda.ipynb
+++ b/notebooks/01_eda.ipynb
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -21,8 +21,11 @@
     "import numpy as np\n",
     "import matplotlib.pyplot as plt\n",
     "import seaborn as sns\n",
+    "import sys\n",
     "\n",
-    "# import de constantes (asegúrate de pip install -e . en tu venv)\n",
+    "project_root = Path().resolve().parent  \n",
+    "sys.path.insert(0, str(project_root))\n",
+    "\n",
     "from src.config import RAW_DATA_FILE, FIGURES_DIR, TARGET_COLUMN\n",
     "\n",
     "# preparar folder de figuras\n",
