--- a/notebooks/02_feature_engineering.ipynb
+++ b/notebooks/02_feature_engineering.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -92,7 +92,13 @@
     "import numpy as np\n",
     "import matplotlib.pyplot as plt\n",
     "import seaborn as sns\n",
+    "import sys\n",
+    "\n",
+    "project_root = Path().resolve().parent  \n",
+    "sys.path.insert(0, str(project_root))\n",
+    "\n",
     "from src.config import INTERIM_DATA_DIR, TARGET_COLUMN, FIGURES_DIR, PROCESSED_DATA_DIR\n",
+    "\n",
     "\n",
     "# Preparar carpeta para figuras de feature_engineering\n",
     "fig_dir = FIGURES_DIR / 'feature_engineering'\n",
